源码学习并做一些改动